[tool.poetry]
name = "satellitegeodesy2020"
version = "2021.04.17"
description = "Scripts for the DTU Satellite Geodesy (2020) course"
authors = ["Mads Ehrhorn <mads.ehrhorn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.2"
jupyter = "^1.0.0"
numpy = "^1.20.2"
PyAstronomy = "^0.16.0"
streamlit = "^0.80.0"
plotly = "^4.14.3"
watchdog = "^2.0.2"
scipy = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
